<resources>
    <string name="app_name">CGPA Calculator</string>

    <!--Widget Labels-->
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="gradeScored">Grade Scored</string>
    <string name="courseUnit">Course Unit</string>
    <string name="courseCode">Course Code</string>
    <string name="addCourse">Add Course</string>
    <string name="calculator">Calculate CGPA</string>

    <!--Instructions-->
    <string name="app_info">
		This free utility performs the boring task of Calculating your CPGA, just add all your Courses and grades in the table below
	</string>
    <string name="instruction_details">
		<![CDATA[
		<b>NOTE: </b>Click the <em>Add Course</em> button below to add Your Courses in the following format -
		<br><br>
		COURSE CODE: Usually 3-digit, not necessarily  distinct for each subject
		<br>
		COURSE UNIT: Unit for the entered Course - It must be a digit
		<br>
		GRADE SCORED: Grade scored - Valid Grades are A,B,C,D,E,F
		<br><br>
		<em>To remove a Course from the Table, simply click the </em> <span><b>x</b></span> <em> button next to the given course row</em>
		]]>
	</string>
    <string name="instruction_addcourse">
    <![CDATA[
		Click the <em>Add Course</em> button to display the Input Buttons
		<br>
		After entering the fields in the Order listed above, Click <em>Add</em> button to add the given entries into the Table.
		<br><br>
		In case of Invalid inputs, an Error message is displayed, Click the OK button and try again with Valid Inputs
		]]>
    </string>
    <string name="emptyInputErrorMsg">ERROR: Empty Input Field</string>
    <string name="invalidUnitErrorMsg">
		<![CDATA[
		<br>INVALID UNIT: %1$s <br>Course Unit must be digit
		]]>
	</string>
    <string name="invalidGradeErrorMsg">
		<![CDATA[
		<br>INVALID GRADE: %1$s entered <br>Valid grades are: %2$s
		]]>
	</string>
    <string name="ok">OK</string>
    <string name="computeCGPA">Compute CGPA</string>
    <string name="resultError">
		ERROR: No Course Entry added so-far
	</string>
    <string name="copy_right" translatable="false">
		©%1$d AbdulMalik Bello, Computer Engineering - University of Ilorin
	</string>
    <string name="about_me">
        <![CDATA[
        Hi there, I am <b>AbdulMalik Bello</b>, a Software developer for the Android Framework.
    <br>I created this application to help students automate the Boring task of calculating their CGPA.
    <br>If you love what I do, consider <i>Buying me a Coffee</i> by clicking the Button below

         ]]>
    </string>
</resources>