<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/courseCode"
                android:background="@drawable/border"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/courseUnit"
                android:background="@drawable/border"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/gradeScored"
                android:background="@drawable/border"/>

        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/addCourseButton"
        android:text="@string/addCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/userInputLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/courseCodeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/courseCode"
                android:importantForAutofill="no"
                android:inputType="text" />
            <EditText
                android:id="@+id/courseUnitInput"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/courseUnit"
                android:inputType="phone"
                android:importantForAutofill="no"/>
            <EditText
                android:id="@+id/gradeScoredInput"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/gradeScored"
                android:inputType="textCapCharacters"
                android:importantForAutofill="no"/>

        </LinearLayout>
        <Button
            android:id="@+id/confirmAdditionButton"
            style="?android:buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/errorMsgLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/computeCGPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/teal_200"
            app:cornerRadius="15dp"
            android:text="@string/calculator"
            />
        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>